--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "PT Sans", sans-serif;
+  height: 100vh;
 }
 
 /*# sourceMappingURL=main.css.map */
