Dodavanje font-weight opcija kroz scss fajl

--- a/css/abstracts/variables.scss
+++ b/css/abstracts/variables.scss
@@ -5,3 +5,7 @@ $color-black: #000;
 // FONT
 $font-primary: 'PT Sans', sans-serif;
 $font-secondary: 'PT Serif', serif;
+
+$normal: 400;
+$semi-bold: 600;
+$bold: 700;
