--- a/css/layout/layouts.scss
+++ b/css/layout/layouts.scss
@@ -1,1 +1,38 @@
-
+.header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 40vh;
+	background-image: url("../images/header.jpg");
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	&:before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgb(255, 255, 255);
+		opacity: .2;
+	}
+	&__text-box {
+		text-align: center;
+		.heading-primary {
+			color: $color-white;
+			margin-bottom: 20px;
+			&--main {
+				display: block;
+				font-size: 35px;
+				font-weight: $normal;
+				letter-spacing: 4px;
+			}
+			&--sub {
+				display: block;
+				font-size: 19px;
+				font-weight: $semi-bold;
+			}
+		}
+	}
+}
