--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,42 @@
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
+  background-image: url("../images/header.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: 0.2;
+}
+.header__text-box {
+  text-align: center;
+}
+.header__text-box .heading-primary {
+  color: #fff;
+  margin-bottom: 20px;
+}
+.header__text-box .heading-primary--main {
+  display: block;
+  font-size: 35px;
+  font-weight: 400;
+  letter-spacing: 4px;
+}
+.header__text-box .heading-primary--sub {
+  display: block;
+  font-size: 19px;
+  font-weight: 600;
+}
+
 body {
   margin: 0;
   padding: 0;
