Dodavanje nove - plave boje

--- a/css/abstracts/variables.scss
+++ b/css/abstracts/variables.scss
@@ -1,6 +1,7 @@
 // COLORS
 $color-white: #fff;
 $color-black: #000;
+$color-blue: rgb(35, 204, 255);
 
 // FONT
 $font-primary: 'PT Sans', sans-serif;
