--- a/css/layout/layouts.scss
+++ b/css/layout/layouts.scss
@@ -44,3 +44,47 @@
 	display: flex;
 	text-align: center;
 }
+
+.main-wrapper {
+	display: flex;
+	align-items: flex-start;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	height: auto;
+	padding: 20px;
+	& > div {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-basis: 50%;
+	}
+	&__category--one {
+		flex-direction: column;
+		& > div {
+			margin: 10px;
+		}
+		.order {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 60px;
+			color: $color-white;
+			background-color: $color-blue;
+			width: 100%;
+			height: 200px;
+		}
+		.img-wrapper {
+			width: 100%;
+			height: 200px;
+			background-image: url("../images/step-1.jpg");
+			background-position: top;
+			background-size: cover;
+		}
+		.info {
+			text-align: center;
+			h3 {
+				text-transform: uppercase;
+			}
+		}
+	}
+}
