--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,50 @@
   text-align: center;
 }
 
+.main-wrapper {
+  display: flex;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  height: auto;
+  padding: 20px;
+}
+.main-wrapper > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 50%;
+}
+.main-wrapper__category--one {
+  flex-direction: column;
+}
+.main-wrapper__category--one > div {
+  margin: 10px;
+}
+.main-wrapper__category--one .order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  color: #fff;
+  background-color: #23ccff;
+  width: 100%;
+  height: 200px;
+}
+.main-wrapper__category--one .img-wrapper {
+  width: 100%;
+  height: 200px;
+  background-image: url("../images/step-1.jpg");
+  background-position: top;
+  background-size: cover;
+}
+.main-wrapper__category--one .info {
+  text-align: center;
+}
+.main-wrapper__category--one .info h3 {
+  text-transform: uppercase;
+}
+
 body {
   margin: 0;
   padding: 0;
