Dodavanje novih boja

--- a/css/abstracts/variables.scss
+++ b/css/abstracts/variables.scss
@@ -1,7 +1,8 @@
 // COLORS
 $color-white: #fff;
 $color-black: #000;
-$color-blue: rgb(35, 204, 255);
+$color-blue: #91e5ff;
+$color-grey: #272929;
 
 // FONT
 $font-primary: 'PT Sans', sans-serif;
