--- a/css/layout/layouts.scss
+++ b/css/layout/layouts.scss
@@ -1,90 +1,217 @@
-.header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 40vh;
-	padding: 0 25px;
-	background-image: url("../images/header.jpg");
-	background-size: cover;
-	background-position: center;
-	position: relative;
-	&:before {
-		content: "";
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: rgb(255, 255, 255);
-		opacity: .2;
-	}
-	&__text-box {
-		text-align: center;
-		.heading-primary {
-			color: $color-white;
-			margin-bottom: 20px;
-			&--main {
-				display: block;
-				font-size: 36px;
-				font-weight: $normal;
-				letter-spacing: 3px;
-			}
-			&--sub {
-				display: block;
-				font-size: 16px;
-				font-weight: $semi-bold;
-				letter-spacing: 1px;
-			}
-		}
-	}
-}
-
-.text-wrapper p {
-	padding: 5px 15px;
-	display: flex;
-	text-align: center;
-}
-
 .main-wrapper {
-	display: flex;
-	align-items: flex-start;
-	flex-flow: row wrap;
-	justify-content: space-between;
-	height: auto;
-	padding: 20px;
-	& > div {
+	margin: 0 auto;
+	max-width: 800px;
+	.header {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		flex-basis: 50%;
-	}
-	&__category--one {
-		flex-direction: column;
-		& > div {
-			margin: 10px;
+		height: 30vh;
+		padding: 0 25px;
+		background-image: url("../images/header.jpg");
+		background-size: cover;
+		background-position: center;
+		position: relative;
+		&:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: $color-white;
+			opacity: .2;
 		}
-		.order {
-			display: flex;
+		&__text-box {
+			text-align: center;
+			.heading-primary {
+				color: $color-white;
+				margin-bottom: 20px;
+				&--main {
+					display: block;
+					font-size: 32px;
+					font-weight: $normal;
+					letter-spacing: 3px;
+					animation: moveInLeft 2s ease-out;
+				}
+				&--sub {
+					display: block;
+					font-size: 14px;
+					font-weight: $semi-bold;
+					letter-spacing: 1px;
+					animation: moveInRight 2s ease-out;
+				}
+			}
+		}
+	}
+
+	.text-wrapper p {
+		padding: 5px 10px;
+		font-size: 14px;
+		font-family: $font-secondary;
+		font-weight: $semi-bold;
+		text-align: center;
+		color: $color-grey;
+	}
+
+	.layout-wrapper {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 10px;
+		grid-auto-rows: minmax(100px, auto);
+		& > div {
+			display: grid;
+			width: 100%;
 			justify-content: center;
 			align-items: center;
-			font-size: 60px;
+		}
+		.order-one,
+		.order-two,
+		.order-three,
+		.order-four {
+			font-size: 120px;
+			font-family: $font-secondary;
 			color: $color-white;
 			background-color: $color-blue;
-			width: 100%;
-			height: 200px;
 		}
-		.img-wrapper {
-			width: 100%;
-			height: 200px;
-			background-image: url("../images/step-1.jpg");
-			background-position: top;
+		.order-one {
+			order: 1;
+		}
+		.info-one {
+			order: 2;
+		}
+		.img-wrapper-one {
+			order: 3;
+		}
+		.order-two {
+			order: 4;
+			grid-column: 2;
+			-ms-grid-row: 1;
+			-ms-grid-row-span: 2;
+			grid-row: 2/4;
+		}
+		.info-two {
+			order: 5;
+			grid-row: 3/5;
+		}
+		.img-wrapper-two {
+			order: 6;
+			grid-column: 2;
+			-ms-grid-row: 1;
+			-ms-grid-row-span: 2;
+			grid-row: 4/6;
+		}
+		.order-three {
+			order: 7;
+			-ms-grid-row: 1;
+			-ms-grid-row-span: 2;
+			grid-row: 5/7;
+		}
+		.info-three {
+			order: 8;
+		}
+		.img-wrapper-three {
+			order: 9;
+		}
+		.order-four {
+			order: 10;
+			grid-column: 2;
+			grid-row: 7/9;
+		}
+		.info-four {
+			order: 11;
+		}
+		.img-wrapper-one,
+		.img-wrapper-two,
+		.img-wrapper-three {
+			background-position: center;
 			background-size: cover;
 		}
 		.info {
+			justify-content: center;
 			text-align: center;
+			flex-direction: column;
 			h3 {
+				margin: 8px 0 0;
 				text-transform: uppercase;
+				font-size: 17px;
 			}
+			p {
+				font-size: 17px;
+				margin: 5px 5px 10px;
+			}
+		}
+		.img-wrapper-one {
+			height: 180px;
+			background-image: url("../images/step-1.jpg");
+		}
+		.img-wrapper-two {
+			height: 100%;
+			background-image: url("../images/step-2.jpg");
+		}
+		.img-wrapper-three {
+			height: 160px;
+			background-image: url("../images/step-3-4.jpg");
+		}
+	}
+
+	.footer {
+		display: flex;
+		flex-direction: column;
+		font-family: $font-secondary;
+		&__text-info {
+			margin: 10px 20px 0;
+			&--main {
+				display: inline-block;
+				width: 120px;
+				font-size: 30px;
+				font-weight: $bold;
+				text-transform: uppercase;
+				margin: 0;
+			}
+			&--sub {
+				margin: 5px 0 0;
+				font-size: 14px;
+			}
+			&--highlight {
+				text-align: center;
+				text-transform: uppercase;
+				margin: 0;
+				font-size: 48px;
+				font-family: $font-primary;
+				font-weight: $bold;
+				color: $color-blue;
+			}
+		}
+		&__background {
+			background-image: url("../images/footer.jpg");
+			background-position: center;
+			background-size: cover;
+			height: 300px;
+			transition: all 0.5s ease;
+			filter: grayscale(80%);
+			&:hover {
+				filter: none;
+			}
+		}
+	}
+
+	.btn-top-link {
+		display: inline-block;
+		position: fixed;
+		bottom: -100px;
+		right: 50px;
+		padding: 6px 13px;
+		font-weight: bold;
+		font-size: 23px;
+		border-radius: 50%;
+		opacity: 0.7;
+		color: $color-white;
+		background: $color-black;
+		box-shadow: 0 10px 30px rgba($color-black, .20);
+		transition: all .3s ease;
+		z-index: 25;
+		&.down {
+			bottom: 50px;
 		}
 	}
 }
