--- a/css/base/animations.scss
+++ b/css/base/animations.scss
@@ -1,10 +1,10 @@
 @keyframes moveInLeft {
 	0% {
 		opacity: 0;
-		transform: translateX(-10rem);
+		transform: translateX(-100px);
 	}
 	80% {
-		transform: translateX(1rem);
+		transform: translateX(10px);
 	}
 	100% {
 		opacity: 1;
@@ -15,10 +15,10 @@
 @keyframes moveInRight {
 	0% {
 		opacity: 0;
-		transform: translateX(10rem);
+		transform: translateX(100px);
 	}
 	80% {
-		transform: translateX(-1rem);
+		transform: translateX(-10px);
 	}
 	100% {
 		opacity: 1;
@@ -29,7 +29,7 @@
 @keyframes moveInBottom {
 	0% {
 		opacity: 0;
-		transform: translateY(3rem);
+		transform: translateY(30px);
 	}
 	100% {
 		opacity: 1;
